NOTE/java/8.7/数组.md
# 数组和数组工具类

### 什么是数组

数组是具有相同数据类型且按一定次序排列的一组变量的集合体。即用一个变量名表示一批数据。`Java`为数组在内存中分配一段连续的空间，且存储数据的个数是固定的。

### 数组元素

构成数组的每一个数据称为数组元素

### 数组下标

数组元素在数组中的位置（从0开始，依次加1）

### 数组大小

元素个数叫做数组的大小，也叫数组的长度（`length`可以查）

### 使用步骤

1. 定义
2. 分配内存
3. 元素初始化
4. 使用

> 提示
>
> 1. 数组是引用类型
> 2. 内存地址编号是由`JVM`分配的，通常用十六进制表示。

## 使用

### 定义

定义数组有两种语法格式：

```java
方法一：
数据类型 数组名[];
方法二:
数据类型[] 数组名；
```

> 定义数组本质上就是向`JVM`申请内存，`JVM`将内存划分为几个区域。其中包含了堆和栈。不同的区域存储不同类别的数据。定义数组时，`JVM`将数组的名称存储在栈中，栈是一个先进后出的数据结构，因此数据名称在栈底。

### 分配

语法格式

```java
数组名 = new 数据类型[数组长度];
```

定义数组和分配内存可以合并在一起写

```java
数据类型[] 数组名 = new 数据类型[数组长度];
```

> 声明一个数组时指定了数组名称和元素的类型，并未指定数组元素的个数，也没有为数组元素分配内存，由于没有为数组元素分配内存，所以无法使用数组存储数据。
>
> 要让系统改为数组元素分配存储空间，必须之处数组元素的个数，并通过`new`运算符为数组元素分配内存空间。

### 初始化

数组声明并为数据元素分配空间完成后，必须为数组元素初始化，才能使用数组元素。

|    数组元素类型     |     默认初始值     |
| :-----------------: | :----------------: |
| byte,short,int,long |         0          |
|    float,double     |        0.0         |
|        char         | `'\u0000'`(空字符) |
|       boolean       |       false        |
|    引用数据类型     |        null        |

### tips:增强for循环遍历数组

语法规则

```java
for(元素类型 变量名:要迭代的对象){
    ~~~~
}
```

## 一维数组和多维数组

一维数组只有一个维度，而多维数组有多个维度。在实际应用中，多维数组中使用最多的是二维数组。  

一维数组的下标只能对应一个元素，而二维即多维数组，可用矩阵来表示，他们都是两个或多个下标值对应一个元素，是多对一的关系，因此是非线性结构。

一维数组的定义：

```java
数据类型[] 数组名 = new 数据类型[数组长度];
```

多维数组的定义：

1. 二维数组：

```java
数据类型[][] 数组名 = new 数据类型[行数][列数];
```

2. 三维数组：

```java
数据类型[][][] 数组名 = new 数据类型[行数][列数][层数];
```

## 数组工具类（`Arrays类`）

### 常用方法

|          方法           | 返回类型  |                 说明                 |
| :---------------------: | :-------: | :----------------------------------: |
| `equals(array1,array2)` | `boolean` |         比较两个数组是否相等         |
|      `sort(array)`      |  `void`   |     对数组`array`的元素进行排序      |
|    `toString(array)`    | `String`  |  将一个数组`array`转换成一个字符串   |
|    `fill(array,val)`    |  `void`   | 把数组`array`的所有元素都赋值为`val` |
|     `copyOf（array,length）`     | 与`array`数据类型一致 |把数组`array`赋值成一个长度为`length`的新数组|
| `binarySearch(array,val)` | `int` |查询元素值`val`在数组`array`中的下标|
|    `compare(array1,array2)`    | `int` |按字典顺序比较数组，前面的数组大，返回大于0的值。反之返回小于0的值|
|     `copyOfRange(arr,start,end)`     | 与`array`数据类型一致 |将指定数组的指定范围复制到新数组中|
|     `fill（arr,start,end,val）`     | `void` |将指定的值分配给指定数组的指定范围的每个元素|
|    `mismatch(array1,array2)`    | `int` |查找并返回两个数组之间第一个不匹配的索引，否则如果未找到不匹配，则返回-1|
| `mismatch(array1,,start1,end1,array2,start2,end2)` | `int` |查找并返回指定范围内两个数组之间第一个不匹配的相对索引，否则如果未找到不匹配，则返回-1|

